Improve code for converting spaghetti index to string

--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -161,7 +161,7 @@
     "    seed = p['Log starting seed rate']\n",
     "    incidence = renewal_model.func(gen_mean, gen_sd, proc, seed).incidence * p['Case detection proportion']\n",
     "    spaghetti[i] = incidence\n",
-    "spaghetti.columns = [str(i) for i in sample_params.index.to_flat_index()]"
+    "spaghetti.columns = sample_params.index.to_flat_index().map(str)"
    ]
   },
   {
