Fix up seeding mess

--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -133,16 +133,7 @@
     "burn_in = 10\n",
     "n_samples = 10\n",
     "idata_burnt = idata.sel(draw=slice(10, None))\n",
-    "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97560872-2345-412f-b7c6-76d5da022437",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
     "sample_params = esamp.xarray_to_sampleiterator(idata_sampled)"
    ]
   },
