Make parameter table be untransformed seed value

--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -47,13 +47,13 @@
    "source": [
     "# Define parameter ranges\n",
     "scalar_req = {\n",
-    "    'Generation time mean (days)' : {'init': 5.0, 'lower': 0.1, 'upper': 14.0},\n",
-    "    'Generation time standard deviation (days)': {'init': 5.0, 'lower': 2.5, 'upper': 8.0},\n",
-    "    'Case detection proportion': {'init': 0.06, 'lower': 0.04, 'upper': 0.2},\n",
-    "    'Log starting seed rate': {'init': np.log(1e4), 'lower': np.log(5e3), 'upper': np.log(2e4)},\n",
+    "    'gen_mean': {'name': 'Generation time mean (days)', 'init': 5.0, 'lower': 0.1, 'upper': 14.0},\n",
+    "    'gen_sd': {'name': 'Generation time standard deviation (days)', 'init': 5.0, 'lower': 2.5, 'upper': 8.0},\n",
+    "    'cdr': {'name': 'Case detection proportion', 'init': 0.06, 'lower': 0.04, 'upper': 0.2},\n",
+    "    'seed': {'name': 'Peak seed rate', 'init': 1e4, 'lower': 5e3, 'upper': 2e4},\n",
     "}\n",
     "params_df = pd.DataFrame(scalar_req).transpose()\n",
-    "proc_req = {'init': 0.0, 'lower': -2.0, 'upper': 2.0}"
+    "proc_req = {'name': 'random_process', 'init': 0.0, 'lower': -2.0, 'upper': 2.0}"
    ]
   },
   {
@@ -66,7 +66,7 @@
     "def get_obj_func(model):\n",
     "    def calib_func_ll(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "        gen_time_mean, gen_time_sd, cdr, seed, *process = parameters\n",
-    "        incidence = model.func(gen_time_mean, gen_time_sd, process, seed).incidence\n",
+    "        incidence = model.func(gen_time_mean, gen_time_sd, process, np.log(seed)).incidence\n",
     "        return 0.0 - sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])\n",
     "\n",
     "    def obj_func_ll(gen_time_mean, gen_time_sd, cdr_param, seed, proc_params):\n",
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "priors = [esp.UniformPrior(k, (v['lower'], v['upper'])) for k, v in params_df.iterrows()]\n",
-    "priors.append(esp.UniformPrior('Log non-mechanistic process values', (proc_req['lower'], proc_req['upper']), size=n_process_periods))\n",
+    "priors.append(esp.UniformPrior(proc_req['name'], (proc_req['lower'], proc_req['upper']), size=n_process_periods))\n",
     "renewal_model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
     "obj_func = get_obj_func(renewal_model)\n",
     "n_draws = 100\n",
@@ -146,13 +146,24 @@
    "source": [
     "spaghetti = pd.DataFrame()\n",
     "for i, p in enumerate(sample_params):\n",
-    "    gen_mean = p['Generation time mean (days)']\n",
-    "    gen_sd = p['Generation time standard deviation (days)']\n",
-    "    proc = p['Log non-mechanistic process values']\n",
-    "    seed = p['Log starting seed rate']\n",
-    "    incidence = renewal_model.func(gen_mean, gen_sd, proc, seed).incidence * p['Case detection proportion']\n",
-    "    spaghetti[i] = incidence\n",
+    "    incidence = renewal_model.func(p['gen_mean'], p['gen_sd'], p['random_process'], np.log(p['seed'])).incidence\n",
+    "    cdr = p['cdr']\n",
+    "    spaghetti[i] = incidence * cdr\n",
     "spaghetti.columns = sample_params.index.to_flat_index().map(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "865160e7-bcb9-47eb-8f07-2803692ed524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To get markdown-compatible dataframe for parameters\n",
+    "params_table = params_df.drop(columns=['name'])\n",
+    "params_table.index = params_df['name']\n",
+    "params_table = params_table.rename_axis(None)\n",
+    "params_table = params_table.rename(columns={'init': 'Starting value', 'lower': 'Lower limit', 'upper': 'Upper limit'})"
    ]
   },
   {
