Reconcile jax object with non-jax code

--- a/renew/07jax.ipynb
+++ b/renew/07jax.ipynb
@@ -7,13 +7,18 @@
    "outputs": [],
    "source": [
     "from jax import lax, jit, numpy as jnp\n",
+    "from jax.scipy.stats import gamma\n",
+    "from jax import numpy as jnp, vmap, grad\n",
+    "from IPython.display import Markdown\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "pd.options.plotting.backend = 'plotly'\n",
     "\n",
     "import summer2\n",
     "\n",
-    "from emu_renewal.renew import RenewalModel"
+    "from emu_renewal.renew import RenewalModel\n",
+    "from emu_renewal.process import cosine_multicurve, sinterp\n",
+    "from typing import NamedTuple"
    ]
   },
   {
@@ -22,13 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set some global values - these get consumed by our jax model function later\n",
-    "population = 33e6\n",
-    "n_times = 276\n",
-    "run_in = 30\n",
-    "n_process_periods = 12\n",
-    "\n",
-    "# Example parameter values for validation\n",
+    "# Parameter values that previously worked for fitting to the example Malaysia data\n",
     "gen_time_mean = 8.974486528334516\n",
     "gen_time_sd = 5.444942511395974\n",
     "proc_vals = np.array([0.11303378, -0.75406457, -0.04278638, -0.08685292, 0.34915623, 0.41983523, 0.27799167, 0.47966875, 0.18586957, 0.3891201, 0.22046122, 0.02434282])\n",
@@ -41,15 +40,119 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import NamedTuple\n",
+    "class JaxGammaDens():\n",
+    "    def get_params(self, mean, sd):\n",
+    "        scale = (sd * sd) / mean\n",
+    "        a = mean / scale\n",
+    "        return {'a': a, 'scale': scale}\n",
+    "    \n",
+    "    def get_densities(self, window_len, mean, sd):\n",
+    "        return jnp.diff(gamma.cdf(jnp.arange(window_len + 1), **self.get_params(mean, sd)))\n",
+    "    \n",
+    "    def get_description(self):\n",
+    "        '''Get the description of this code.\n",
     "\n",
-    "# Maximum window length for gamma densities (ie width of sliding window of incidence history)\n",
-    "WLEN = 30\n",
-    "\n",
-    "# Our state class, used by lax.scan\n",
+    "        Returns:\n",
+    "            The description in markdown format\n",
+    "        '''\n",
+    "        return '\\n\\n### Generation times\\n' \\\n",
+    "            'Generation times for each day are calculated by ' \\\n",
+    "            'first finding the parameters needed to construct ' \\\n",
+    "            'a gamma distribution with mean and standard deviation ' \\\n",
+    "            'equal to those specified by the submitted parameter values. ' \\\n",
+    "            'The integrals of the probability density of this distribution ' \\\n",
+    "            'between consecutive integer values are then calculated for ' \\\n",
+    "            'later combination with the incidence time series. '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class RenewalState(NamedTuple):\n",
-    "    incidence: jnp.array # WLEN sliding window\n",
-    "    suscept: float # previous suscept value"
+    "    incidence: jnp.array\n",
+    "    suscept: float\n",
+    "\n",
+    "class JaxModel:\n",
+    "    def __init__(self, population, window_len, n_times, run_in, n_process_periods, dens_obj):\n",
+    "        self.pop = population\n",
+    "        self.n_times = n_times\n",
+    "        self.run_in = run_in\n",
+    "        self.n_process_periods = n_process_periods\n",
+    "        self.window_len = window_len\n",
+    "        self.x_proc_vals = sinterp.get_scale_data(jnp.linspace(0.0, self.n_times, self.n_process_periods))\n",
+    "        self.dens_obj = dens_obj\n",
+    "        self.model_times = jnp.arange(self.n_times)\n",
+    "        self.seed_x_vals = [0.0, round(self.run_in * 0.5), self.run_in]\n",
+    "\n",
+    "    def seed_func(self, t, seed):\n",
+    "        x_vals = sinterp.get_scale_data(jnp.array(self.seed_x_vals))\n",
+    "        y_vals = sinterp.get_scale_data(jnp.array([0.0, jnp.exp(seed), 0.0]))\n",
+    "        return cosine_multicurve(t, x_vals, y_vals)\n",
+    "    \n",
+    "    def model_func(self, gen_time_mean, gen_time_sd, process_req, seed):\n",
+    "        densities = self.dens_obj.get_densities(self.window_len, gen_time_mean, gen_time_sd)\n",
+    "\n",
+    "        y_proc_vals = sinterp.get_scale_data(process_req)\n",
+    "        process_vals = jnp.exp(vmap(cosine_multicurve, in_axes=(0, None, None))(self.model_times, self.x_proc_vals, y_proc_vals))\n",
+    "\n",
+    "        init_state = RenewalState(np.zeros(self.window_len), self.pop)\n",
+    "        \n",
+    "        def state_update(state: RenewalState, t) -> tuple[RenewalState, jnp.array]:\n",
+    "            r_t = process_vals[t] * state.suscept / self.pop\n",
+    "            renewal = (densities * state.incidence).sum() * r_t\n",
+    "            seed_component = self.seed_func(t, seed)\n",
+    "            total_new_incidence = renewal + seed_component\n",
+    "            total_new_incidence = jnp.where(total_new_incidence > state.suscept, state.suscept, total_new_incidence)\n",
+    "            suscept = state.suscept - total_new_incidence\n",
+    "            incidence = jnp.zeros_like(state.incidence)\n",
+    "            incidence = incidence.at[1:].set(state.incidence[:-1])\n",
+    "            incidence = incidence.at[0].set(total_new_incidence)\n",
+    "            return RenewalState(incidence, suscept), jnp.array([total_new_incidence, suscept])\n",
+    "\n",
+    "        end_state, outputs = lax.scan(state_update, init_state, self.model_times)\n",
+    "\n",
+    "        return outputs\n",
+    "    \n",
+    "    def get_description(self):\n",
+    "        renew_desc = (\n",
+    "            '\\n\\n### Renewal process\\n'\n",
+    "            'Calculation of the renewal process '\n",
+    "            'consists of multiplying the incidence values for the preceding days '\n",
+    "            'by the reversed generation time distribution values. '\n",
+    "            'This follows a standard formula, '\n",
+    "            'described elsewhere by several groups,[@cori2013; @faria2021] i.e. '\n",
+    "            '$$i_t = R_t\\sum_{\\\\tau<t} i_\\\\tau g_{t-\\\\tau}$$\\n'\n",
+    "            '$R_t$ is calculated as the product of the proportion '\n",
+    "            'of the population remaining susceptible '\n",
+    "            'and the non-mechanistic random process '\n",
+    "            'generated external to the renewal model. '\n",
+    "            'The susceptible population is calculated by '\n",
+    "            'subtracting the number of new incident cases from the '\n",
+    "            'running total of susceptibles at each iteration.\\n'\n",
+    "        )\n",
+    "\n",
+    "        non_mech_desc = (\n",
+    "            '\\n\\n### Non-mechanistic process\\n'\n",
+    "            'The time values corresponding to the submitted process values '\n",
+    "            'are set to be evenly spaced throughout the simulation period. '\n",
+    "            'Next, a continuous function of time was constructed from '\n",
+    "            'the non-mechanistic process series values submitted to the model. '\n",
+    "            'After curve fitting, the sequence of parameter values pertaining to '\n",
+    "            'the non-mechanistic process are exponentiated, '\n",
+    "            'such that parameter exploration for these quantities is '\n",
+    "            'undertaken in the log-transformed space. '\n",
+    "        )\n",
+    "        \n",
+    "        seed_desc = (\n",
+    "            '\\n\\n### Seeding\\n'\n",
+    "            'Seeding was achieved by interpolating using a cosine function. '\n",
+    "            f'The number of seeded cases scaled from ? at time {self.seed_x_vals[0]} '\n",
+    "        )\n",
+    "        \n",
+    "        return renew_desc + non_mech_desc + self.dens_obj.get_description() + seed_desc"
    ]
   },
   {
@@ -58,68 +161,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax.scipy.stats.gamma import cdf\n",
-    "from jax import numpy as jnp, vmap, grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_densities(window_len, mean, sd):\n",
-    "    scale = (sd * sd) / mean\n",
-    "    a = mean / scale\n",
-    "    return jnp.diff(cdf(jnp.arange(window_len+1),a=a,scale=scale))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from emu_renewal.process import cosine_multicurve, sinterp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def seed_func(t, seed):\n",
-    "    xvals = sinterp.get_scale_data(jnp.array([0.0, round(run_in * 0.5), run_in]))\n",
-    "    yvals = sinterp.get_scale_data(jnp.array([0.0, jnp.exp(seed), 0.0]))\n",
-    "    return cosine_multicurve(t, xvals, yvals)\n",
+    "dist = JaxGammaDens()\n",
+    "j = JaxModel(33e6, 50, 276, 30, 12, dist)\n",
     "\n",
     "@jit\n",
-    "def model_func(gen_time_mean, gen_time_sd, process_req, seed):\n",
-    "    \n",
-    "    densities = get_densities(WLEN, gen_time_mean, gen_time_sd)\n",
-    "\n",
-    "    init_state = RenewalState(np.zeros(WLEN), population)\n",
-    "\n",
-    "    xvals = sinterp.get_scale_data(jnp.linspace(0.0, n_times, n_process_periods))\n",
-    "    yvals = sinterp.get_scale_data(process_req)\n",
-    "    process_vals = jnp.exp(vmap(cosine_multicurve, in_axes=(0, None, None))(jnp.arange(n_times),xvals,yvals))\n",
-    "\n",
-    "    def state_update(state: RenewalState, t) -> tuple[RenewalState, jnp.array]:\n",
-    "        r_t = process_vals[t] * state.suscept / population\n",
-    "        renewal = (densities * state.incidence).sum() * r_t\n",
-    "        seed_component = seed_func(t, seed)\n",
-    "        total_new_incidence = renewal + seed_component\n",
-    "        total_new_incidence = jnp.where(total_new_incidence > state.suscept, state.suscept, total_new_incidence)\n",
-    "        suscept = state.suscept - total_new_incidence\n",
-    "        incidence = jnp.zeros_like(state.incidence)\n",
-    "        incidence = incidence.at[1:].set(state.incidence[:-1])\n",
-    "        incidence = incidence.at[0].set(total_new_incidence)\n",
-    "        return RenewalState(incidence, suscept), jnp.array([total_new_incidence, suscept])\n",
-    "\n",
-    "    end_state, outputs = lax.scan(state_update, init_state, jnp.arange(n_times))\n",
-    "\n",
-    "    return outputs"
+    "def get_inc_result(gen_time_mean, gen_time_sd, proc_vals, seed_peak):\n",
+    "    return j.model_func(gen_time_mean, gen_time_sd, proc_vals, jnp.log(seed_peak))[:, 0]"
    ]
   },
   {
@@ -128,36 +175,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = RenewalModel(population, n_times, run_in, n_process_periods)\n",
+    "Markdown(j.get_description())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incidence_jax = get_inc_result(gen_time_mean, gen_time_sd, proc_vals, seed_peak)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = RenewalModel(33e6, 276, 30, 12)\n",
     "incidence_orig = m.func(gen_time_mean, gen_time_sd, proc_vals, np.log(seed_peak)).incidence\n",
-    "incidence_jax = model_func(gen_time_mean, gen_time_sd, proc_vals, np.log(seed_peak))[:, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.Series(incidence_orig).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.Series(incidence_jax).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max(incidence_orig) / max(incidence_jax)"
+    "pd.DataFrame(\n",
+    "    {\n",
+    "        'original': incidence_orig,\n",
+    "        'jax': incidence_jax,\n",
+    "    }\n",
+    ").plot()"
    ]
   }
  ],
