Reconcile model object structures between jax and non-jax

--- a/renew/07jax.ipynb
+++ b/renew/07jax.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "# @jit\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
-    "    return j.model_func(gen_mean, gen_sd, proc, jnp.log(seed))"
+    "    return j.func(gen_mean, gen_sd, proc, jnp.log(seed))"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Markdown(j.get_description())"
+    "Markdown(j.get_full_desc())"
    ]
   },
   {
