Sort out documentation of renewal processes with strings

--- a/renew/07jax.ipynb
+++ b/renew/07jax.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "# @jit\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
-    "    return j.func(gen_mean, gen_sd, proc, jnp.log(seed))"
+    "    return j.func(gen_mean, gen_sd, proc, seed)"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_jax = get_inc_result(gen_time_mean, gen_time_sd, proc_vals, seed_peak)"
+    "results_jax = get_inc_result(gen_time_mean, gen_time_sd, proc_vals, np.log(seed_peak))"
    ]
   },
   {
