--- a/renew/07jax.ipynb
+++ b/renew/07jax.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "import summer2\n",
     "\n",
+    "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import RenewalModel, JaxModel"
    ]
   },
@@ -30,37 +31,6 @@
     "gen_time_sd = 5.444942511395974\n",
     "proc_vals = np.array([0.11303378, -0.75406457, -0.04278638, -0.08685292, 0.34915623, 0.41983523, 0.27799167, 0.47966875, 0.18586957, 0.3891201, 0.22046122, 0.02434282])\n",
     "seed_peak = 13892.00570877276"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class JaxGammaDens():\n",
-    "    def get_params(self, mean, sd):\n",
-    "        scale = (sd * sd) / mean\n",
-    "        a = mean / scale\n",
-    "        return {'a': a, 'scale': scale}\n",
-    "    \n",
-    "    def get_densities(self, window_len, mean, sd):\n",
-    "        return jnp.diff(gamma.cdf(jnp.arange(window_len + 1), **self.get_params(mean, sd)))\n",
-    "    \n",
-    "    def get_description(self):\n",
-    "        '''Get the description of this code.\n",
-    "\n",
-    "        Returns:\n",
-    "            The description in markdown format\n",
-    "        '''\n",
-    "        return '\\n\\n### Generation times\\n' \\\n",
-    "            'Generation times for each day are calculated by ' \\\n",
-    "            'first finding the parameters needed to construct ' \\\n",
-    "            'a gamma distribution with mean and standard deviation ' \\\n",
-    "            'equal to those specified by the submitted parameter values. ' \\\n",
-    "            'The integrals of the probability density of this distribution ' \\\n",
-    "            'between consecutive integer values are then calculated for ' \\\n",
-    "            'later combination with the incidence time series. '"
    ]
   },
   {
