Actually jit the model in jax notebook

--- a/renew/07jax.ipynb
+++ b/renew/07jax.ipynb
@@ -42,7 +42,7 @@
     "dist = JaxGammaDens()\n",
     "j = JaxModel(33e6, 50, 276, 30, 12, dist)\n",
     "\n",
-    "# @jit\n",
+    "@jit\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
     "    return j.func(gen_mean, gen_sd, proc, seed)"
    ]
