--- a/renew/09numpyro-jt.ipynb
+++ b/renew/09numpyro-jt.ipynb
@@ -14,7 +14,9 @@
     "import numpyro\n",
     "from numpyro import distributions as dist\n",
     "import arviz as az\n",
+    "pd.options.plotting.backend = 'plotly'\n",
     "\n",
+    "from estival.sampling import tools as esamp\n",
     "import summer2\n",
     "\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
@@ -31,8 +33,8 @@
     "j = JaxModel(33e6, 50, 276, 30, 12, distri)\n",
     "\n",
     "@jit\n",
-    "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
-    "    return j.func(gen_mean, gen_sd, proc, seed)"
+    "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
+    "    return j.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr"
    ]
   },
   {
@@ -58,15 +60,16 @@
    "outputs": [],
    "source": [
     "priors = {\n",
-    "    \"gen_mean\": dist.Uniform(2.0, 10.0),\n",
-    "    \"gen_sd\": dist.Uniform(1.0, 5.0),\n",
-    "    \"proc\": dist.Uniform(np.repeat(-2.0, 4), np.repeat(2.0, 4)),\n",
-    "    \"seed\": dist.Uniform(4.0, 15.0),  # This is actually the log seed\n",
+    "    \"gen_mean\": dist.Uniform(8.0, 10.0),\n",
+    "    \"gen_sd\": dist.Uniform(2.0, 7.0),\n",
+    "    \"proc\": dist.Uniform(np.repeat(-1.0, 12), np.repeat(1.0, 12)),\n",
+    "    \"seed\": dist.Uniform(7.0, 12.0),  # This is actually the log seed\n",
+    "    \"cdr\": dist.Uniform(0.1, 0.2),\n",
     "}\n",
     "\n",
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
-    "    model_res = get_inc_result(**param_updates).incidence[run_in:]\n",
+    "    model_res = get_inc_result(**param_updates)\n",
     "    like = dist.Normal(model_res, jnp.std(jnp.array(mys_data)) * 0.1).log_prob(jnp.array(mys_data)).sum()\n",
     "    numpyro.factor(\"incidence\", like)"
    ]
@@ -98,7 +101,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "az.plot_trace(idata);"
+    "burn_in = 10\n",
+    "n_samples = 10\n",
+    "idata_burnt = idata.sel(draw=slice(burn_in, None))\n",
+    "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
+    "sample_params = esamp.xarray_to_sampleiterator(idata_sampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spaghetti = pd.DataFrame()\n",
+    "for i, p in enumerate(sample_params):\n",
+    "    incidence = get_inc_result(**p)\n",
+    "    spaghetti[i] = incidence\n",
+    "spaghetti.columns = sample_params.index.to_flat_index().map(str)\n",
+    "spaghetti.index += run_in\n",
+    "spaghetti[\"targets\"] = mys_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_vals = np.array(j.x_proc_vals.points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spaghetti.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_proc_vals_from_sample(sample):\n",
+    "    sample_df = sample.convert(\"pandas\")\n",
+    "    proc_df = pd.DataFrame(index=range(len(sample_df.iloc[0, :][\"proc\"])), columns=sample_df.index)\n",
+    "    for i in sample_df.index:\n",
+    "        proc_df.loc[:, i] = np.exp(sample_df.loc[i, \"proc\"])\n",
+    "    proc_df.columns = proc_df.columns.to_flat_index().map(str)\n",
+    "    return proc_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_proc_vals_from_sample(sample_params)\n",
+    "proc_df.plot()"
    ]
   }
  ],
