Extract process values from model

--- a/renew/09numpyro-jt.ipynb
+++ b/renew/09numpyro-jt.ipynb
@@ -129,7 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_vals = np.array(j.x_proc_vals.points)"
+    "from emu_renewal.process import sinterp, cosine_multicurve\n",
+    "from jax import vmap"
    ]
   },
   {
@@ -138,21 +139,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaghetti.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_proc_vals_from_sample(sample):\n",
-    "    sample_df = sample.convert(\"pandas\")\n",
-    "    proc_df = pd.DataFrame(index=range(len(sample_df.iloc[0, :][\"proc\"])), columns=sample_df.index)\n",
+    "def get_proc_vals_from_sample(renew_model, sample_idata):\n",
+    "    sample_df = esamp.xarray_to_sampleiterator(sample_idata).convert(\"pandas\")\n",
+    "    times = np.array(renew_model.model_times)\n",
+    "    proc_df = pd.DataFrame()\n",
     "    for i in sample_df.index:\n",
-    "        proc_df.loc[:, i] = np.exp(sample_df.loc[i, \"proc\"])\n",
-    "    proc_df.columns = proc_df.columns.to_flat_index().map(str)\n",
+    "        y_vals = sinterp.get_scale_data(np.array(sample_df.loc[i, \"proc\"]))\n",
+    "        model_vals = np.exp(vmap(cosine_multicurve, in_axes=(0, None, None))(times, renew_model.x_proc_vals, y_vals))\n",
+    "        proc_df[i] = model_vals\n",
     "    return proc_df"
    ]
   },
@@ -162,7 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_proc_vals_from_sample(sample_params)\n",
+    "proc_df = get_proc_vals_from_sample(j, idata_sampled)\n",
+    "proc_df.columns = proc_df.columns.to_flat_index().map(str)\n",
     "proc_df.plot()"
    ]
   }
