Some tidying up and nicer plotting

--- a/renew/09numpyro-jt.ipynb
+++ b/renew/09numpyro-jt.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax import jit, random\n",
+    "from jax import jit, random, vmap\n",
     "from jax import numpy as jnp\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -19,6 +19,7 @@
     "from estival.sampling import tools as esamp\n",
     "import summer2\n",
     "\n",
+    "from emu_renewal.process import sinterp, cosine_multicurve\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel"
    ]
@@ -29,12 +30,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distri = JaxGammaDens()\n",
-    "j = JaxModel(33e6, 50, 276, 30, 12, distri)\n",
+    "renew_model = JaxModel(33e6, 50, 276, 30, 12, JaxGammaDens())\n",
     "\n",
-    "@jit\n",
-    "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return j.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr"
+    "def get_inc_result(renewal_model, gen_mean, gen_sd, proc, seed, cdr):\n",
+    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renewal_wrap = jit(get_inc_result, static_argnames=[\"renewal_model\"])"
    ]
   },
   {
@@ -69,7 +77,7 @@
     "\n",
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
-    "    model_res = get_inc_result(**param_updates)\n",
+    "    model_res = renewal_wrap(**param_updates, renewal_model=renew_model)\n",
     "    like = dist.Normal(model_res, jnp.std(jnp.array(mys_data)) * 0.1).log_prob(jnp.array(mys_data)).sum()\n",
     "    numpyro.factor(\"incidence\", like)"
    ]
@@ -80,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kernel = numpyro.infer.NUTS(calib_model)\n",
+    "kernel = numpyro.infer.NUTS(calib_model, dense_mass=True)\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
     "mcmc.run(rng_key, extra_fields=(\"accept_prob\",))"
@@ -116,21 +124,11 @@
    "source": [
     "spaghetti = pd.DataFrame()\n",
     "for i, p in enumerate(sample_params):\n",
-    "    incidence = get_inc_result(**p)\n",
+    "    incidence = get_inc_result(renew_model, **p)\n",
     "    spaghetti[i] = incidence\n",
     "spaghetti.columns = sample_params.index.to_flat_index().map(str)\n",
     "spaghetti.index += run_in\n",
     "spaghetti[\"targets\"] = mys_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from emu_renewal.process import sinterp, cosine_multicurve\n",
-    "from jax import vmap"
    ]
   },
   {
@@ -156,9 +154,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc_df = get_proc_vals_from_sample(j, idata_sampled)\n",
-    "proc_df.columns = proc_df.columns.to_flat_index().map(str)\n",
-    "proc_df.plot()"
+    "proc_df = get_proc_vals_from_sample(renew_model, idata_sampled)\n",
+    "proc_df.columns = proc_df.columns.to_flat_index().map(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotly.subplots import make_subplots\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "fig = make_subplots(rows=2, cols=1, shared_xaxes=True, vertical_spacing=0.05)\n",
+    "fig.update_layout(margin={m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}, height=600)\n",
+    "fig.add_traces(spaghetti.plot().data, rows=1, cols=1)\n",
+    "fig.add_traces(proc_df.plot().data, rows=2, cols=1)"
    ]
   }
  ],
