--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -152,7 +152,7 @@
    "source": [
     "burn_in = 10\n",
     "n_samples = 10\n",
-    "idata_burnt = idata.sel(draw=slice(10, None))\n",
+    "idata_burnt = idata.sel(draw=slice(burn_in, None))\n",
     "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
     "sample_params = esamp.xarray_to_sampleiterator(idata_sampled)"
    ]
