Simplify jax comparison notebook

--- a/renew/07-jax.ipynb
+++ b/renew/07-jax.ipynb
@@ -1,15 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison between jax and non-jax models\n",
+    "Quick notebook to verify that jax and non-jax models can produce similar results\n",
+    "under equivalent configurations.\n",
+    "Specifically, if the window length for looking backwards at \n",
+    "previous incidence values for the jax values is set to a high value\n",
+    "(relative to the size of the tail of its generation time distribution)\n",
+    "we get very similar numerical outputs back."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax.scipy.stats import gamma\n",
-    "from jax import jit\n",
     "from jax import numpy as jnp\n",
-    "from IPython.display import Markdown\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "pd.options.plotting.backend = 'plotly'\n",
@@ -26,11 +36,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameter values that previously worked for fitting to the example Malaysia data\n",
-    "gen_time_mean = 8.974486528334516\n",
-    "gen_time_sd = 5.444942511395974\n",
-    "proc_vals = np.array([0.11303378, -0.75406457, -0.04278638, -0.08685292, 0.34915623, 0.41983523, 0.27799167, 0.47966875, 0.18586957, 0.3891201, 0.22046122, 0.02434282])\n",
-    "seed_peak = 13892.00570877276"
+    "# Reasonable parameter values for Malaysia data from previous calibration\n",
+    "gen_time_mean = 8.9744\n",
+    "gen_time_sd = 5.4449\n",
+    "proc_vals = np.array([0.1130, -0.7540, -0.0427, -0.0868, 0.3491, 0.4198, 0.2779, 0.4796, 0.1858, 0.389, 0.2204, 0.0243])\n",
+    "seed_peak = np.log(13892.0057)"
    ]
   },
   {
@@ -39,10 +49,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist = JaxGammaDens()\n",
-    "j = JaxModel(33e6, 50, 276, 30, 12, dist)\n",
+    "window_len = 50\n",
+    "j = JaxModel(33e6, window_len, 276, 30, 12, JaxGammaDens())\n",
+    "m = RenewalModel(33e6, 276, 30, 12)\n",
     "\n",
-    "@jit\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
     "    return j.func(gen_mean, gen_sd, proc, seed)"
    ]
@@ -53,7 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(j.get_full_desc())"
+    "incidence_j = get_inc_result(gen_time_mean, gen_time_sd, proc_vals, seed_peak).incidence\n",
+    "incidence_m = m.func(gen_time_mean, gen_time_sd, proc_vals, seed_peak).incidence"
    ]
   },
   {
@@ -62,32 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_jax = get_inc_result(gen_time_mean, gen_time_sd, proc_vals, np.log(seed_peak))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incidence_jax = results_jax.incidence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = RenewalModel(33e6, 276, 30, 12)\n",
-    "incidence_orig = m.func(gen_time_mean, gen_time_sd, proc_vals, np.log(seed_peak)).incidence\n",
-    "pd.DataFrame(\n",
-    "    {\n",
-    "        'original': incidence_orig,\n",
-    "        'jax': incidence_jax,\n",
-    "    }\n",
-    ").plot()"
+    "pd.DataFrame({'original': incidence_m, 'jax': incidence_j}).plot()"
    ]
   }
  ],
