Move Jax window length argument to end to make models more equivalent

--- a/renew/07-jax.ipynb
+++ b/renew/07-jax.ipynb
@@ -22,7 +22,7 @@
     "from jax import numpy as jnp\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "pd.options.plotting.backend = 'plotly'\n",
+    "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
     "import summer2\n",
     "\n",
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "window_len = 50\n",
-    "j = JaxModel(33e6, window_len, 276, 30, 12, JaxGammaDens())\n",
+    "j = JaxModel(33e6, 276, 30, 12, JaxGammaDens(), window_len)\n",
     "m = RenewalModel(33e6, 276, 30, 12)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({'original': incidence_m, 'jax': incidence_j}).plot()"
+    "pd.DataFrame({\"original\": incidence_m, \"jax\": incidence_j}).plot()"
    ]
   }
  ],
