--- a/renew/08-numpyro.ipynb
+++ b/renew/08-numpyro.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = JaxModel(33e6, 50, 276, 30, 12, JaxGammaDens())\n",
+    "renew_model = JaxModel(33e6, 276, 30, 12, JaxGammaDens(), 50)\n",
     "\n",
     "def get_inc_result(renewal_model, gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr"
@@ -68,11 +68,11 @@
    "outputs": [],
    "source": [
     "priors = {\n",
-    "    \"gen_mean\": dist.Uniform(8.0, 10.0),\n",
+    "    \"gen_mean\": dist.Uniform(5.0, 12.0),\n",
     "    \"gen_sd\": dist.Uniform(2.0, 7.0),\n",
-    "    \"proc\": dist.Uniform(np.repeat(-1.0, 12), np.repeat(1.0, 12)),\n",
-    "    \"seed\": dist.Uniform(7.0, 12.0),  # This is actually the log seed\n",
-    "    \"cdr\": dist.Uniform(0.1, 0.2),\n",
+    "    \"proc\": dist.Uniform(np.repeat(-2.0, 12), np.repeat(2.0, 12)),\n",
+    "    \"seed\": dist.Uniform(5.0, 15.0),  # This is actually the log seed\n",
+    "    \"cdr\": dist.Uniform(0.05, 0.4),\n",
     "}\n",
     "\n",
     "def calib_model():\n",
