Failed attempts to fix up PYMC calibration

--- a/renew/05-apply-to-data.ipynb
+++ b/renew/05-apply-to-data.ipynb
@@ -41,7 +41,7 @@
     "import nevergrad as ng\n",
     "from IPython.display import Markdown\n",
     "\n",
-    "from emu_renewal.renew import RenewalModel, TruncRenewalModel\n",
+    "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.outputs import plot_output_fit"
    ]
   },
@@ -92,15 +92,7 @@
    "outputs": [],
    "source": [
     "# Get the renewal model object - choosing between standard and with truncated generation times\n",
-    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
-    "\n",
-    "# long_gen_densities = model.dens_obj.get_densities(\n",
-    "#     100, \n",
-    "#     scalar_req['Generation time mean (days)']['upper'], \n",
-    "#     scalar_req['Generation time standard deviation (days)']['upper'],\n",
-    "# )\n",
-    "# gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.999)\n",
-    "# model = TruncRenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods, gen_times_end)"
+    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)"
    ]
   },
   {
@@ -180,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(model.get_description())"
+    "Markdown(model.get_full_desc())"
    ]
   },
   {
