--- a/renew/06-calibration.ipynb
+++ b/renew/06-calibration.ipynb
@@ -17,7 +17,7 @@
     "import pymc as pm\n",
     "import arviz as az\n",
     "\n",
-    "from emu_renewal.renew import RenewalModel, TruncRenewalModel\n",
+    "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.calibrate import get_wrapped_ll, use_model"
    ]
   },
@@ -47,13 +47,13 @@
    "source": [
     "# Define parameter ranges\n",
     "scalar_req = {\n",
-    "    'gen_mean': {'name': 'Generation time mean (days)', 'init': 5.0, 'lower': 0.1, 'upper': 14.0},\n",
-    "    'gen_sd': {'name': 'Generation time standard deviation (days)', 'init': 5.0, 'lower': 2.5, 'upper': 8.0},\n",
-    "    'cdr': {'name': 'Case detection proportion', 'init': 0.06, 'lower': 0.04, 'upper': 0.2},\n",
-    "    'seed': {'name': 'Peak seed rate', 'init': 1e4, 'lower': 5e3, 'upper': 2e4},\n",
+    "    'gen_mean': {'name': 'Generation time mean (days)', 'init': 9.0, 'lower': 7.0, 'upper': 12.0},\n",
+    "    'gen_sd': {'name': 'Generation time standard deviation (days)', 'init': 5.0, 'lower': 4.0, 'upper': 7.0},\n",
+    "    'cdr': {'name': 'Case detection proportion', 'init': 0.15, 'lower': 0.1, 'upper': 0.2},\n",
+    "    'seed': {'name': 'Peak seed rate', 'init': 1e4, 'lower': 8e3, 'upper': 1.5e4},\n",
     "}\n",
     "params_df = pd.DataFrame(scalar_req).transpose()\n",
-    "proc_req = {'name': 'random_process', 'init': 0.0, 'lower': -2.0, 'upper': 2.0}"
+    "proc_req = {'name': 'random_process', 'init': 0.0, 'lower': -0.8, 'upper': 0.8}"
    ]
   },
   {
@@ -126,11 +126,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0119cc6c-cb1c-46f4-8df2-6671fd1e509f",
+   "id": "7d0d76b6-e79b-4493-86e4-5e289bbef889",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.Series(incidence).plot()"
+    "incidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f77ea75-5a92-45ec-bafc-2e417d7457c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mys_data.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84354910-6023-4246-99bf-5a8d6ad29bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc_vals = np.array([0.1130, -0.7540, -0.0427, -0.0868, 0.3491, 0.4198, 0.2779, 0.4796, 0.1858, 0.389, 0.2204, 0.0243])\n",
+    "res = renewal_model.func(scalar_req[\"gen_mean\"][\"init\"], scalar_req[\"gen_sd\"][\"init\"], proc_vals, np.log(1e4))\n",
+    "pd.Series(res.incidence * 0.15).plot()"
    ]
   },
   {
