Get notebook 06 running as intended

--- a/renew/06-calibration.ipynb
+++ b/renew/06-calibration.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_posterior_params = mpp = np.array(az.summary(idata)['mean'])"
+    "mean_posterior_params = mpp = np.array(az.summary(idata)[\"mean\"])"
    ]
   },
   {
@@ -120,17 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "incidence = renewal_model.func(mpp[0], mpp[1], mpp[4:], mpp[3]).incidence * mpp[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d0d76b6-e79b-4493-86e4-5e289bbef889",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incidence"
+    "incidence = renewal_model.func(mpp[0], mpp[1], mpp[4:], np.log(mpp[3])).incidence * mpp[2]"
    ]
   },
   {
@@ -140,19 +130,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mys_data.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84354910-6023-4246-99bf-5a8d6ad29bc2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proc_vals = np.array([0.1130, -0.7540, -0.0427, -0.0868, 0.3491, 0.4198, 0.2779, 0.4796, 0.1858, 0.389, 0.2204, 0.0243])\n",
-    "res = renewal_model.func(scalar_req[\"gen_mean\"][\"init\"], scalar_req[\"gen_sd\"][\"init\"], proc_vals, np.log(1e4))\n",
-    "pd.Series(res.incidence * 0.15).plot()"
+    "inc = pd.DataFrame(incidence)\n",
+    "inc[\"targets\"] = mys_data\n",
+    "inc.plot()"
    ]
   },
   {
@@ -167,46 +147,6 @@
     "idata_burnt = idata.sel(draw=slice(burn_in, None))\n",
     "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
     "sample_params = esamp.xarray_to_sampleiterator(idata_sampled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03ad3e68-b244-41c3-b528-c469554ae233",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_params = sample_params.convert('pandas').loc[(3, 46), :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31619dc9-7c8f-4281-a5a7-d779e370f859",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "357cca99-88ff-443a-b70b-07e78998f9b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incidence = renewal_model.func(example_params['gen_mean'], example_params['gen_sd'], example_params['random_process'], np.log(example_params['seed'])).incidence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51866e1c-7651-4171-bb17-3ed8b2e2cfac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.Series(incidence).plot()"
    ]
   },
   {
