--- a/renew/01-basics.ipynb
+++ b/renew/01-basics.ipynb
@@ -43,7 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict\n",
     "from scipy.stats import gamma\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -216,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
